--- a/src/scss/elements/header.scss
+++ b/src/scss/elements/header.scss
@@ -17,8 +17,11 @@
     }
     &__icon-container{
         position: absolute;
-        left: 40px;
+        left: 80px;
         top: 11px;
+        @media (max-width: $md4+px) {
+            left: 10px;
+        }
     }
     &__icon-image{
         @include adaptive-value('width', 140, 80, 0);
