--- a/src/scss/elements/heading.scss
+++ b/src/scss/elements/heading.scss
@@ -18,7 +18,7 @@
             position: absolute;
             left: 50%;
             transform: translateX(-50%);
-            bottom: 5px;
+            bottom: 30px;
             @include adaptive-value("font-size",
             18,
             14,
@@ -27,9 +27,9 @@
                 display: block;
                 background: url("../img/icon-arrow-down.svg");
                 background-repeat: no-repeat;
-                background-position: bottom;
+                background-position: center;
                 content: "";
-                height: 100px;
+                height: 150px;
                 width: 30px;
 
             }
@@ -37,6 +37,7 @@
 
     &__container {
         padding: 150px 20px;
+        min-height:500px;
     }
 
     &__content {
