--- a/src/scss/elements/sections.scss
+++ b/src/scss/elements/sections.scss
@@ -3,34 +3,23 @@
     &__header{
     }
 }
-.introduction {
-	&__information { 
-        
-    }
-}
 .info-block__container { 
     display:flex;
     flex-wrap:wrap;
     .info-block { 
         flex: 1.5 0.8 200px;
-    
-
+}  
+} 
+.main-block:nth-child(3) .text-container:nth-child(1){
+    background: url("../img/desktop/image-photography.jpg");
 }
-.info-block~.info-block{
-        margin-left: 30px;
-        @media (max-width:$md4+px) {
-            margin-left: 0;
-        }
+    .main-block:nth-child(3) .text-container:nth-child(2){
+        background: url("../img/desktop/image-photography.jpg");
     }
-}
-.info{
-
-}
 .img-container { 
     position:relative;
     padding: 0 0 50% 0;
     overflow: hidden;
-}
 .ill {
     position:absolute;
     top:0;
@@ -42,6 +31,7 @@
     min-width: 100px;
     min-height: 100px;
 
+}
 }
 .text-container { 
 
