--- a/src/scss/support/variables.scss
+++ b/src/scss/support/variables.scss
@@ -12,8 +12,9 @@ $md3: 768;
 $md4: 480;
 
 //Colors
-$primary: #fff;
-$secondary: #fff;
-$accent: #fff;
+$primary: #24303E;
+$secondary: #808397;
+$accent: #FAD400;
+$accent2: #FE7766;
 $black: #000;
 $white: #fff;
