--- a/src/scss/support/variables.scss
+++ b/src/scss/support/variables.scss
@@ -1,6 +1,6 @@
 // Fonts
-$fontFamily:"Oswald";
-$SecondFontFamily: "Open Sans";
+$fontFamily:"Fraunces";
+$SecondFontFamily: "Barlow";
 
 // Container
 $minWidth: 320px;
