--- a/src/scss/elements/heading.scss
+++ b/src/scss/elements/heading.scss
@@ -1,6 +1,7 @@
 .main-heading {
             margin-top:-50px;
             width: 100%;
+            height: 100vh;
             top:0;
             position: relative;
             background: url("../img/desktop/image-header.jpg");
@@ -37,7 +38,6 @@
 
     &__container {
         padding: 150px 20px;
-        min-height:500px;
     }
 
     &__content {
