--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -67,8 +67,35 @@ h2.title{
     justify-content: center;
     cursor: pointer;
     color: #24303E;
+    font-size: 15px;
+    position:relative;
+    z-index:3;
+}
+.btn:after {
+    display:block;
+    position: absolute;
+    content: "";
+    width: 110%;
+    height: 5px;
+    background-color: #FAD400;
+    bottom: 3px;
+    left: -5px;
+    opacity: 0.25;
+    border-radius: 28px;
+    z-index:-1;
+}
+.btn:hover::after{
+    opacity: 1;
+    
 }
 
+.btn.second-btn::after{
+    background-color: #FE7766;
+}
+
+.btn.second-btn:hover::after{
+    opacity: 1;
+}
 // ---------------container styles-----------------------//
 @import 'elements/container';
 
