--- a/src/scss/support/variables.scss
+++ b/src/scss/support/variables.scss
@@ -14,6 +14,7 @@ $md4: 480;
 //Colors
 $primary: #24303E;
 $secondary: #808397;
+$icons: #2C7566;
 $accent: #FAD400;
 $accent2: #FE7766;
 $black: #000;
