--- a/src/scss/elements/heading.scss
+++ b/src/scss/elements/heading.scss
@@ -1,16 +1,24 @@
 .main-heading {
-            margin-top:-50px;
+            margin-top: -120px;
             width: 100%;
-            height: 100vh;
+            height: 800px;
             top:0;
             position: relative;
             background: url("../img/desktop/image-header.jpg");
-            background-size: cover;
+            background-size: 100% 100%;
+            background-position: center;
+            background-repeat: no-repeat;
+        @media (max-width:$md2+px) {
+            height: 650px;
+        }
         @media (max-width:$md3+px) {
+            height: 500px;
             background-clip: content-box;
             background-repeat: no-repeat;
             background-position: center;
-
+        }
+        @media (max-width:$md4+px) {
+            height: 300px;
         }
         &_btn {
             padding: 15px 40px 15px 0;
@@ -18,8 +26,10 @@
             line-height: 2;
             position: absolute;
             left: 50%;
+            bottom: -60px;
             transform: translateX(-50%);
-            bottom: 30px;
+            width: 10px;
+            height: 30px;
             @include adaptive-value("font-size",
             18,
             14,
@@ -32,12 +42,13 @@
                 content: "";
                 height: 150px;
                 width: 30px;
-
+                opacity: 1;
             }
         }
 
     &__container {
-        padding: 150px 20px;
+        padding: 200px 20px;
+        position: relative;
     }
 
     &__content {
@@ -67,7 +78,7 @@
         color:#fff;
         text-align: center;
         @include adaptive-value('font-size', 48, 38, 0);
-        text-transform: none;
+        text-transform: uppercase;
         margin:0;
         @media (max-width: $md4+px) {
             font-size: 30px;
