--- a/src/scss/elements/sections.scss
+++ b/src/scss/elements/sections.scss
@@ -4,30 +4,35 @@
     }
 }
 .info-block__container { 
-    display:flex;
-    flex-wrap:wrap;
+    display: flex;
+    flex-wrap: wrap;
     .info-block { 
         flex: 1.5 0.8 200px;
-}  
+    }
+    @media (max-width: $md4+px) {
+        display: block;
+    }
 } 
 .main-block:nth-child(3) .text-container:nth-child(1){
     background: url("../img/desktop/image-graphic-design.jpg");
+    background-size: cover;
 }
-    .main-block:nth-child(3) .text-container:nth-child(2){
-        background: url("../img/desktop/image-photography.jpg");
-    }
+.main-block:nth-child(3) .text-container:nth-child(2){
+    background: url("../img/desktop/image-photography.jpg");
+    background-size: cover;
+}
 .img-container { 
-    position:relative;
+    position: relative;
     padding: 0 0 50% 0;
     overflow: hidden;
 .ill {
-    position:absolute;
-    top:0;
-    left:0;
+    position: absolute;
+    top: 0;
+    left: 0;
     object-fit: cover;
     object-position: top;
     width: 100%;
-    height:100%;
+    height: 100%;
     min-width: 100px;
     min-height: 100px;
 
