header, main block small fixes

--- a/src/scss/elements/sections.scss
+++ b/src/scss/elements/sections.scss
@@ -22,19 +22,27 @@
 .main-block:nth-child(1) .text-container{
     order: -1;
 }
+
 .main-block:nth-child(3) .text-container:nth-child(1){
     background: url("../img/desktop/image-graphic-design.jpg");
     background-size: cover;
     @media (max-width: $md4+px) {
-        background-size: 130% 30%;
-        background-position: center top;
+        background-position: center bottom;
+        background-size: auto;
+        display: flex;
+        flex-flow: column;
+        justify-content: flex-end;
     }
 }
 .main-block:nth-child(3) .text-container:nth-child(2){
     background: url("../img/desktop/image-photography.jpg");
     background-size: cover;
     @media (max-width: $md4+px) {
-        background-size: contain;
+        background-size: auto;
+        background-position: center bottom;
+        display: flex;
+        flex-flow: column;
+        justify-content: flex-end;
     }
 }
 .img-container { 
@@ -51,7 +59,9 @@
     height: 100%;
     min-width: 100px;
     min-height: 100px;
-
+    @media (max-width: $md4+px){
+        object-fit: initial;
+    } 
 }
 }
 .main-block.info-block .text-container { 
