--- a/src/scss/elements/header.scss
+++ b/src/scss/elements/header.scss
@@ -30,7 +30,7 @@
         .menu__link:last-child{
             background: #fff;
             border-radius: 28px;
-            padding: 15 30px;
+            padding: 15px 30px;
             a {
             color: #24303E;
             font-size: 15px;
