--- a/src/scss/elements/heading.scss
+++ b/src/scss/elements/heading.scss
@@ -4,7 +4,7 @@
             height: 800px;
             top:0;
             position: relative;
-            background: url("../img/desktop/image-header.jpg");
+            background: url("../img/desktop/main-heading-pict.png");
             background-size: 100% 100%;
             background-position: center;
             background-repeat: no-repeat;
