--- a/src/scss/elements/menu.scss
+++ b/src/scss/elements/menu.scss
@@ -13,26 +13,39 @@
             flex-wrap:wrap;
             width: 60%;
             position:absolute;
-            right:0;
-
+            right: 0;
         }
         @media (max-width: $md4+px){
             display:none;
             &.active{
             display:block;
             flex-direction: column;
-            width:initial;
+            width: 90%;
             flex-wrap:nowrap;
             align-items:center;
             height: initial;
             overflow: scroll;
-            right: 50px;
+            right: 0;
             margin: 20px;
-            background-color:rgba(0, 91, 193, 1);}
+            background-color:#fff;
+            position: relative;
+            // &:before{
+            //     display:block;
+            //     content: "";
+            //     position: absolute;
+            //     width: 0;
+            //     height: 0;
+            //     border-style: solid;
+            //     border-width: 30px 0 30px 20px;
+            //     border-color:  white transparent transparent transparent;
+            //     top: -30px;
+            //     right: 0;
+            // }
+            }
             &:hover{
-                background-color:rgba(255, 255, 255, 0.6);
+                // background-color:rgba(255, 255, 255, 0.6);
                 .menu__link{
-                color:rgba(0, 91, 193, 1);
+                color: #FBD600;
             }
             }
         }
@@ -43,7 +56,7 @@
         font-family: $SecondFontFamily;
         font-weight: 600;
         margin: 0;
-        padding:20px;
+        padding: 20px;
         color: rgba(255, 255, 255, 1);
         transition: all 0.3s ease-in;
         @media (max-width: $md3+px) {
@@ -51,22 +64,26 @@
             margin: 0 20px 0 0;
         }
         @media (max-width: $md4+px) {
+            
             font-size: 20px;
             z-index: 2;
             padding: 0;
             margin: 20px;
+            a {
+                color: #808397;
+            }
         }
     }
     &__burger-icon{
         display:none;
         @media (max-width: $md4+px){
         display: block;
-        width:30px;
-        height:20px;
+        width: 30px;
+        height: 20px;
         color:#fff;
         position:absolute;
         right: 20px;
-        top:20px;
+        top: 20px;
         span{
             display: block;
             width: 100%;
@@ -79,13 +96,12 @@
             position:absolute;
             content: '';
             width: 100%;
-            height: 2px;
+            height: 3px;
             background-color: #fff;
             left:0;
         }
         &:before{
             top:0;
-
         }
         &:after{
             bottom:2px;
