--- a/src/scss/elements/header.scss
+++ b/src/scss/elements/header.scss
@@ -13,6 +13,9 @@
         transform: translateX(-50%);
         padding: 35px 50px;
         box-sizing: border-box;
+        @media (max-width: $md4+px) {
+            padding: 35px 0;
+        }
     }
     &__icon-container{
         position: absolute;
@@ -32,9 +35,9 @@
             background: #fff;
             border-radius: 28px;
             padding: 15px 30px;
+            font-size: 15px;
             a {
             color: #24303E;
-            font-size: 15px;
             font-family: $fontFamily;
             text-transform: uppercase;
             letter-spacing: -1px;
@@ -48,6 +51,7 @@
             background: rgba(#fff, .25);
             a {
                 display:block;
+                font-size: 15px;
                 position:relative;
                 color: #fff;
                 z-index: 99999;
