--- a/src/scss/elements/footer.scss
+++ b/src/scss/elements/footer.scss
@@ -22,7 +22,7 @@
         }
     }
     &__icon-image{
-        @include adaptive-value('width', 140, 80, 0);
+        width: 140px;
         @media (max-width: $md4+px) {
             margin: 10px 0;
         }
@@ -32,6 +32,7 @@
         width:100%;
         .menu__list{
             @media (max-width: $md4+px) {
+                margin-top: 50px;
                 width: 100%;
             }
         }
@@ -40,12 +41,14 @@
         &__body {
             @media (max-width: $md4+px) {
                 width: 100%;
+                margin: 0 auto;
             }
                 }
         &__link a{
             color: #458D7E;
             @media (max-width: $md4+px) {
-                margin-right: 20px;
+                margin-right: 25px;
+                margin-left: 25px;
             }
         }
         &__link a:hover{
@@ -61,7 +64,8 @@
         margin-top: 20px;
     }
     &__link{
-        margin-left:10px;
+        margin-left: 15px;
+        margin-right: 15px;
     }
     &__link:nth-child(1) .socials__icon{
         padding-top: 1px;
