--- a/src/scss/elements/heading.scss
+++ b/src/scss/elements/heading.scss
@@ -18,8 +18,10 @@
             background-position: center;
         }
         @media (max-width:$md4+px) {
+            background: url("../img/mobile/image-header.jpg");
+            background-size: 100% 100%;
             height: 538px;
-            background-size: 190% 100%;
+            background-position: bottom;
         }
         &_btn {
             padding: 15px 40px 15px 0;
@@ -28,7 +30,7 @@
             position: absolute;
             left: 50%;
             bottom: -60px;
-            transform: translateX(-50%);
+            transform: translateX(-45%);
             height: 150px;
             width: 30px;
             @include adaptive-value("font-size",
@@ -46,14 +48,14 @@
                 opacity: 1;
             }
             @media (max-width:$md4+px) {
-                bottom: -192px;
+                bottom: -200px;
             }
         }
     &__container {
         padding: 200px 20px;
         position: relative;
         @media (max-width:$md4+px) {
-            padding: 100px 20px 0 20px;
+            padding: 145px 50px 0 40px;
         }
     }
 
@@ -87,8 +89,9 @@
         text-transform: uppercase;
         margin:0;
         @media (max-width: $md4+px) {
-            font-size: 36px;
-            letter-spacing: 6.25px;
+            font-size: 40px;
+            letter-spacing: 6px;
+            line-height: 1.2;
         }
     }
 
