--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -49,12 +49,16 @@ h2.title{
     @media (max-width:$md4+px){
         margin: 20px 0;
         text-align: center;
+        font-size: 28px;
     }
 }
 .text {
     font-family: $SecondFontFamily;
     font-weight: 300;
     line-height: 1.4;
+    @media (max-width:$md4+px){
+        font-size: 16px;
+    }
 }
 .btn {
     font-family: $fontFamily;
