--- a/src/scss/elements/sections.scss
+++ b/src/scss/elements/sections.scss
@@ -155,6 +155,7 @@ background-color: #F2F2F2;
 }
 .reviews{
     margin-bottom: 100px;
+    margin-top: 100px;
     @media (max-width: $md4+px){
         margin-top: 70px;
     }
